add new background and have better design

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "next": "15.5.2",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0"
   },
