--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.31.9",
     "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.34.1",
     "@tensorflow/tfjs": "^4.22.0",
@@ -25,6 +26,7 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "simplex-noise": "^4.0.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uuid": "^12.0.0"
   },
